# Blues

./: BUG_FIXES_QUICK_REFERENCE.md  BUG_FIXES_REPORT.md  CODE_CHANGES_SUMMARY.md  HANDOVER.md  PROJECT_COMPLETION_REPORT.md  README.md  REPORT_DOWNLOAD_FIX.md  SECTION_DETECTION_FIX.md  SYNTHESIS_ENGINE_IMPLEMENTATION.md  rag-backend.code-workspace
rag-backend/: .env.example  .gitignore  CLEANUP_SUMMARY.md  CODE_ANALYSIS_AND_CHANGES.md  FIX_PLAN.md  README.md  profile_performance.py  pyproject.toml  requirements.txt  run_test.py  scratch_test.py
rag-backend/src/: api.py  config.py  database.py  main.py  vector_store.py
rag-backend/src/agents/: __init__.py  generator.py  planner.py  planner_validator.py  verification.py  verification_backup.py  verifier.py
rag-backend/src/api/: routes.py
rag-backend/src/chunking/: __init__.py  processor.py
rag-backend/src/comparison/: __init__.py  conflict_detector.py
rag-backend/src/embeddings/: embedder.py
rag-backend/src/evidence/: __init__.py  extractor.py
rag-backend/src/export/: __init__.py  report_builder.py
rag-backend/src/generation/: generator.py  inference_engine.py  integration.py  refined_generator.py  summarizer.py
rag-backend/src/ingestion/: __init__.py  fulltext.py  loader.py
rag-backend/src/llm/: __init__.py  base.py  factory.py  gemini_llm.py  groq_llm.py  local.py
rag-backend/src/orchestration/: graph.py  state.py
rag-backend/src/retrieval/: bm25_index.py  dynamic_retriever.py  hybrid_retriever.py  paper_facts.py  reranker.py  retriever.py  scorer.py  web_crawler.py
rag-backend/src/trace/: __init__.py  tracer.py
rag-backend/src/utils/: analysis_schema.py  text_utils.py
rag-backend/src/validation/: pydantic_ai_schemas.py  schemas.py
rag-backend/tests/: test_conflict_detector.py  test_evidence.py  test_generator.py  test_hybrid_retrieval.py  test_inference_engine.py  test_pipeline.py  test_pydantic_ai_agent.py  test_pydantic_ai_schemas.py  test_pydantic_validation.py  test_refined_generator.py  test_trace.py  test_validation_agent.py  test_verification.py
rag-frontend/: README.md  UI_REDESIGN.md  index.html  package-lock.json  package.json  vite.config.ts
rag-frontend/src/: App.tsx  index.css  main.tsx
rag-frontend/src/components/: AnalysisHealthPanel.tsx  ErrorBoundary.tsx  FileUpload.tsx  LandingPage.tsx  LoadingSpinner.tsx  PapersTable.tsx  QueryForm.tsx  ResultsPage.tsx  ResultsPanel.tsx  StatusBar.tsx  SummaryPanel.tsx  VerificationCard.tsx  WorkspacePanels.tsx
rag-frontend/src/services/: api.ts
rag-frontend/src/state/: workspace.tsx
rag-frontend/src/types/: index.ts
