# Project Configuration

[project]
name = "rag-backend"
version = "0.1.0"
description = "Retrieval-Augmented Generation System - Stage 1"
requires-python = ">=3.11"
dependencies = [
    "pymongo>=4.6.0",
    "requests>=2.31.0",
    "sentence-transformers>=2.2.2",
    "faiss-cpu>=1.7.4",
    "nltk>=3.8.1",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
