# Project Configuration

[project]
name = "rag-backend"
version = "0.1.0"
description = "Retrieval-Augmented Generation System - Stage 1"
requires-python = ">=3.11"
dependencies = [
    # Core dependencies
    "requests>=2.31.0",           # HTTP client for OpenAlex/Semantic Scholar APIs
    "python-dotenv>=1.0.0",       # Environment variable management
    "click>=8.1.0",               # CLI framework
    
    # NLP & Embeddings
    "nltk>=3.8.1",                # Sentence tokenization
    "sentence-transformers>=2.2.2", # SciBERT embeddings
    "numpy>=1.24.0",              # Numerical operations
    
    # Vector Store
    "faiss-cpu>=1.7.4",           # FAISS vector search
    
    # Database (for later - commented for testing)
    "pymongo>=4.6.0",             # MongoDB driver
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
